[gd_scene load_steps=17 format=3 uid="uid://dvnit7il85i3j"]

[ext_resource type="Texture2D" uid="uid://bmdxf6ar7es4q" path="res://maxresdefault.jpg" id="1_7ykrv"]
[ext_resource type="Script" path="res://Scenes/levels/main_level.gd" id="1_ueti3"]
[ext_resource type="PackedScene" uid="uid://hebbgcokkspd" path="res://Scenes/players/player.tscn" id="3_54mcx"]
[ext_resource type="PackedScene" uid="uid://b7hebgj2b0eq5" path="res://Scenes/objects/ball.tscn" id="4_6qqjg"]
[ext_resource type="Resource" uid="uid://b63bkycylkg62" path="res://Resources/p1_input.tres" id="6_anxuo"]
[ext_resource type="Texture2D" uid="uid://dvdvd4lxcy2mv" path="res://Sprites/tilemap-base.png" id="6_scqp3"]
[ext_resource type="Resource" uid="uid://b0d2q6lxrm50h" path="res://Resources/p2_input.tres" id="7_0q5t0"]
[ext_resource type="PackedScene" uid="uid://co6gtyvxjonqg" path="res://Scenes/UI/goal_ui.tscn" id="9_gcmkt"]
[ext_resource type="PackedScene" uid="uid://pcymucsovt75" path="res://Scenes/objects/goal.tscn" id="10_fynj3"]

[sub_resource type="LabelSettings" id="LabelSettings_ak7kw"]
font_size = 50
outline_color = Color(0.780392, 0.780392, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_grrj1"]
font_size = 30
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uafq1"]
texture = ExtResource("6_scqp3")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="TileSet" id="TileSet_bxerd"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 5
sources/0 = SubResource("TileSetAtlasSource_uafq1")

[sub_resource type="Animation" id="Animation_cx4yk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["3
"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_26d25"]
resource_name = "countdown"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3
", "2", "1", "GO!!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dayi"]
_data = {
"RESET": SubResource("Animation_cx4yk"),
"countdown": SubResource("Animation_26d25")
}

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_ueti3")

[node name="BallSpawnPos" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -64)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GoalUI" parent="CanvasLayer" instance=ExtResource("9_gcmkt")]

[node name="LevelTimeContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer/LevelTimeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
vertical_alignment = 1

[node name="LevelTimer" type="Timer" parent="CanvasLayer/LevelTimeContainer"]
unique_name_in_owner = true
wait_time = 100.0
one_shot = true
autostart = true

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3
"
label_settings = SubResource("LabelSettings_ak7kw")

[node name="Scoreboard" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2

[node name="Player1Score" type="CenterContainer" parent="CanvasLayer/Scoreboard"]
layout_mode = 1
offset_right = 17.0
offset_bottom = 45.0
size_flags_horizontal = 0

[node name="Score1Label" type="Label" parent="CanvasLayer/Scoreboard/Player1Score"]
layout_mode = 2
text = "0
"
label_settings = SubResource("LabelSettings_grrj1")

[node name="Player2Score" type="CenterContainer" parent="CanvasLayer/Scoreboard"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_bottom = 45.0
grow_horizontal = 0

[node name="Score2Label" type="Label" parent="CanvasLayer/Scoreboard/Player2Score"]
layout_mode = 2
text = "0
"
label_settings = SubResource("LabelSettings_grrj1")

[node name="Maxresdefault" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 1)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_7ykrv")

[node name="Ball" parent="." instance=ExtResource("4_6qqjg")]
position = Vector2(0, -64)

[node name="Player" parent="." instance=ExtResource("3_54mcx")]
position = Vector2(0, 51)
input_data = ExtResource("6_anxuo")

[node name="Player2" parent="." instance=ExtResource("3_54mcx")]
position = Vector2(60, 50)
input_data = ExtResource("7_0q5t0")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MyTilemap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_bxerd")
format = 2
layer_0/tile_data = PackedInt32Array(655340, 65536, 1, 720876, 65536, 1, 655341, 65536, 1, 720877, 65536, 1, 655342, 65536, 1, 720878, 65536, 1, 655343, 65536, 1, 720879, 65536, 1, 655344, 65536, 1, 720880, 65536, 1, 655345, 65536, 1, 720881, 65536, 1, 655346, 65536, 1, 720882, 65536, 1, 655347, 65536, 1, 720883, 65536, 1, 655348, 65536, 1, 720884, 65536, 1, 655349, 65536, 1, 720885, 65536, 1, 655350, 65536, 1, 720886, 65536, 1, 655351, 65536, 1, 720887, 65536, 1, 655352, 65536, 1, 720888, 65536, 1, 655353, 65536, 1, 720889, 65536, 1, 655354, 65536, 1, 720890, 65536, 1, 655355, 65536, 1, 720891, 65536, 1, 655356, 65536, 1, 720892, 65536, 1, 655357, 65536, 1, 720893, 65536, 1, 655358, 65536, 1, 720894, 65536, 1, 655359, 65536, 1, 720895, 65536, 1, 589824, 65536, 1, 655360, 65536, 1, 589825, 65536, 1, 655361, 65536, 1, 589826, 65536, 1, 655362, 65536, 1, 589827, 65536, 1, 655363, 65536, 1, 589828, 65536, 1, 655364, 65536, 1, 589829, 65536, 1, 655365, 65536, 1, 589830, 65536, 1, 655366, 65536, 1, 589831, 65536, 1, 655367, 65536, 1, 589832, 65536, 1, 655368, 65536, 1, 589833, 65536, 1, 655369, 65536, 1, 589834, 65536, 1, 655370, 65536, 1, 589835, 65536, 1, 655371, 65536, 1, 589836, 65536, 1, 655372, 65536, 1, 589837, 65536, 1, 655373, 65536, 1, 589838, 65536, 1, 655374, 65536, 1, 589839, 65536, 1, 655375, 65536, 1, 589840, 65536, 1, 655376, 65536, 1, 589841, 65536, 1, 655377, 65536, 1, 589842, 65536, 1, 655378, 65536, 1, 589843, 65536, 1, 655379, 65536, 1, 786412, 65536, 1, 786413, 65536, 1, 786414, 65536, 1, 786415, 65536, 1, 786416, 65536, 1, 786417, 65536, 1, 786418, 65536, 1, 786419, 65536, 1, 786420, 65536, 1, 786421, 65536, 1, 786422, 65536, 1, 786423, 65536, 1, 786424, 65536, 1, 786425, 65536, 1, 786426, 65536, 1, 786427, 65536, 1, 786428, 65536, 1, 786429, 65536, 1, 786430, 65536, 1, 786431, 65536, 1, 720896, 65536, 1, 720897, 65536, 1, 720898, 65536, 1, 720899, 65536, 1, 720900, 65536, 1, 720901, 65536, 1, 720902, 65536, 1, 720903, 65536, 1, 720904, 65536, 1, 720905, 65536, 1, 720906, 65536, 1, 720907, 65536, 1, 720908, 65536, 1, 720909, 65536, 1, 720910, 65536, 1, 720911, 65536, 1, 720912, 65536, 1, 720913, 65536, 1, 720914, 65536, 1, 720915, 65536, 1, 589804, 65536, 1, 589805, 65536, 1, 589806, 262144, 1, 589807, 65536, 0, 589808, 65536, 0, 589809, 65536, 0, 589810, 65536, 0, 589811, 65536, 0, 589812, 65536, 0, 589813, 65536, 0, 589814, 65536, 0, 589815, 65536, 0, 589816, 65536, 0, 589817, 65536, 0, 589818, 65536, 0, 589819, 65536, 0, 589820, 65536, 0, 589821, 65536, 0, 589822, 65536, 0, 589823, 65536, 0, 524288, 65536, 0, 524289, 65536, 0, 524290, 65536, 0, 524291, 65536, 0, 524292, 65536, 0, 524293, 65536, 0, 524294, 65536, 0, 524295, 65536, 0, 524296, 65536, 0, 524297, 65536, 0, 524298, 65536, 0, 524299, 65536, 0, 524300, 65536, 0, 524301, 65536, 0, 524302, 65536, 0, 524303, 65536, 0, 524304, 65536, 0, 524305, 327680, 1, 524306, 65536, 1, 524307, 65536, 1, 458769, 0, 1, 458770, 65536, 1, 458771, 65536, 1, -720878, 0, 1, -655342, 0, 1, -589806, 0, 1, -524270, 0, 1, -458734, 0, 1, -393198, 0, 1, -327662, 0, 1, -262126, 0, 1, -196590, 0, 1, -1900526, 0, 1, -1834990, 0, 1, -1769454, 0, 1, -1703918, 0, 1, -1638382, 0, 1, -1572846, 0, 1, -1507310, 0, 1, -1441774, 0, 1, -1376238, 0, 1, -1310702, 0, 1, -1245166, 0, 1, -1179630, 0, 1, -1114094, 0, 1, -1048558, 0, 1, -983022, 0, 1, -917486, 0, 1, -851950, 0, 1, -786414, 0, 1, 524268, 65536, 1, 524269, 65536, 1, 524270, 131072, 1, -458771, 131072, 1, -393235, 131072, 1, -327699, 131072, 1, -262163, 131072, 1, -196627, 131072, 1, -131091, 131072, 1, -1835027, 131072, 1, -1769491, 131072, 1, -1703955, 131072, 1, -1638419, 131072, 1, -1572883, 131072, 1, -1507347, 131072, 1, -1441811, 131072, 1, -1376275, 131072, 1, -1310739, 131072, 1, -1245203, 131072, 1, -1179667, 131072, 1, -1114131, 131072, 1, -1048595, 131072, 1, -983059, 131072, 1, -917523, 131072, 1, -851987, 131072, 1, -786451, 131072, 1, -720915, 131072, 1, -655379, 131072, 1, -589843, 131072, 1, -524307, 131072, 1, -1310740, 65536, 1, -1245204, 65536, 1, -1179668, 65536, 1, -1114132, 65536, 1, -1048596, 65536, 1, -983060, 65536, 1, -917524, 65536, 1, -851988, 65536, 1, -786452, 65536, 1, -720916, 65536, 1, -655380, 65536, 1, -589844, 65536, 1, -524308, 65536, 1, -458772, 65536, 1, -393236, 65536, 1, -327700, 65536, 1, -262164, 65536, 1, -196628, 65536, 1, -131092, 65536, 1, -1310701, 65536, 1, -1245165, 65536, 1, -1179629, 65536, 1, -1114093, 65536, 1, -1048557, 65536, 1, -983021, 65536, 1, -917485, 65536, 1, -851949, 65536, 1, -786413, 65536, 1, -720877, 65536, 1, -655341, 65536, 1, -589805, 65536, 1, -524269, 65536, 1, -458733, 65536, 1, -393197, 65536, 1, -327661, 65536, 1, -262125, 65536, 1, -196589, 65536, 1, -196588, 65536, 1, 458772, 65536, 1, 524308, 65536, 1, 589844, 65536, 1, -196587, 65536, 1, 458773, 65536, 1, 524309, 65536, 1, 589845, 65536, 1, -196586, 65536, 1, -131050, 65536, 1, 131094, 65536, 1, 196630, 65536, 1, 262166, 65536, 1, 327702, 65536, 1, 393238, 65536, 1, 458774, 65536, 1, 524310, 65536, 1, 589846, 65536, 1, -131095, 65536, 1, -65559, 65536, 1, 196585, 65536, 1, 262121, 65536, 1, 327657, 65536, 1, 393193, 65536, 1, 458729, 65536, 1, 524265, 65536, 1, -131094, 65536, 1, 524266, 65536, 1, -131093, 65536, 1, 524267, 65536, 1, 589801, 65536, 1, 655337, 65536, 1, 589802, 65536, 1, 655338, 65536, 1, 589803, 65536, 1, 655339, 65536, 1, 720873, 65536, 1, 786409, 65536, 1, 720874, 65536, 1, 786410, 65536, 1, 720875, 65536, 1, 786411, 65536, 1, 655380, 65536, 1, 720916, 65536, 1, 655381, 65536, 1, 720917, 65536, 1, 655382, 65536, 1, 720918, 65536, 1, -65514, 65536, 1, -23, 65536, 1, 65513, 65536, 1, 131049, 65536, 1, 22, 65536, 1, 65558, 65536, 1, -65558, 65536, 1, -22, 65536, 1, 65514, 65536, 1, 131050, 65536, 1, 196586, 65536, 1, 262122, 65536, 1, 327658, 65536, 1, -65557, 262144, 0, -21, 131072, 1, 65515, 131072, 1, 131051, 131072, 1, 196587, 131072, 1, 262123, 131072, 1, 327659, 262144, 1, -65556, 65536, 2, -65555, 131072, 2, 327660, 65536, 0, 327661, 65536, 0, 327662, 131072, 0, 327697, 0, 1, -131054, 0, 2, 327698, 65536, 1, -131053, 65536, 2, 327699, 65536, 1, -131052, 327680, 0, -65516, 0, 1, 20, 0, 1, 65556, 0, 1, 131092, 0, 1, 196628, 0, 1, 262164, 327680, 1, 327700, 65536, 1, -131051, 65536, 1, -65515, 65536, 1, 21, 65536, 1, 65557, 65536, 1, 131093, 65536, 1, 196629, 65536, 1, 262165, 65536, 1, 327701, 65536, 1, 262161, 0, 0, 262162, 65536, 0, 262163, 65536, 0, 458730, 65536, 1, 458731, 65536, 1, 458732, 65536, 1, 458733, 65536, 1, 458734, 131072, 1, 393194, 65536, 1, 393195, 65536, 1, 393196, 65536, 1, 393197, 65536, 1, 393198, 131072, 1, 393233, 0, 1, 393234, 65536, 1, 393235, 65536, 1, 393236, 65536, 1, 393237, 65536, 1)

[node name="Goal2Left" parent="." instance=ExtResource("10_fynj3")]
position = Vector2(-157, 12)

[node name="GoalRight" parent="." instance=ExtResource("10_fynj3")]
position = Vector2(158, 12)
goal_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_4dayi")
}

[connection signal="goal_anim_over" from="CanvasLayer/GoalUI" to="." method="_on_goal_ui_goal_anim_over"]
